--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "bugs": {
     "url": "https://github.com/XianbinZhen/mypage/issues"
   },
-  "homepage": "https://xianbinzhen.github.io/mypage",
+  "homepage": "https://github.com/XianbinZhen/mypage#readme",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
